// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  width: auto;
  box-shadow: 0 0 25px 5px;
}

<Panel
  height="auto"
  width="auto"
>
  <styled.div
    height="auto"
    width="auto"
  >
    <div
      className="c0"
      height="auto"
      width="auto"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;

exports[`Panel should render correctly with height 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 200px;
  width: auto;
  box-shadow: 0 0 25px 5px;
}

<Panel
  height="200px"
  width="auto"
>
  <styled.div
    height="200px"
    width="auto"
  >
    <div
      className="c0"
      height="200px"
      width="auto"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;

exports[`Panel should render correctly with width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  width: 200px;
  box-shadow: 0 0 25px 5px;
}

<Panel
  height="auto"
  width="200px"
>
  <styled.div
    height="auto"
    width="200px"
  >
    <div
      className="c0"
      height="auto"
      width="200px"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;
